<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Tic Tac Toe</string>
    <string name="b00">""</string>
    <string name="b01">""</string>
    <string name="b02">""</string>
    <string name="b10">""</string>
    <string name="b11">""</string>
    <string name="b12">""</string>
    <string name="b20">""</string>
    <string name="b21">""</string>
    <string name="b22">""</string>
    <string name = "action_reset">New Game</string>
    <string-array name = "player_colors_array">
        <item>Player 1: Red, Player 2: Blue</item>
        <item>Player 1: Yellow, Player 2: Green</item>
        <item>Player 1: Cyan, Player 2: Magenta</item>
    </string-array>
    <string name = "player_options">Player Options</string>

</resources>